--- a/style.css
+++ b/style.css
@@ -213,7 +213,7 @@ span{
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(rgba(0, 0, 0, .1), var(--main-color));
+    background: linear-gradient(rgba(0, 0, 0, .1), rgb(39, 45, 46));
     display: flex;
     justify-content: center;
     align-items: center;
