--- a/style.css
+++ b/style.css
@@ -249,5 +249,46 @@ span {
 .portfolio-box:hover .portfolio-layer {
     transform: translateY(0);
 }
+@media(max-width:1023px){
+  header{
+      padding: 12px 20px;
+  }
+  .navigation a{
+      padding-left: 10px;
+  }
+  .title{
+      font-size: 1.8;
+  }
+  section{
+      padding: 80px 20px;
+  }
+  .main-content h3{
+      font-size: 1.6em;
+  }
+  .content{
+      flex-direction: column;
+      align-items: center;
+  }
+}
 
-.portfolio-layer h4 {
+@media (max-width:641px){
+  body{
+      font-size: 12px;
+  }
+  .main-content h2{
+      font-size: 0.8em;
+  }
+
+  .main-content h3{
+      font-size: 1.4em;
+  }
+}
+@media(max-width:300px){
+  body{
+      font-size: 10px;
+  }
+}
+
+
+
+
