--- a/style.css
+++ b/style.css
@@ -201,6 +201,7 @@ span{
     left: 0;
     width: 100%;
     height: 100%;
+    background: linear-gradient(rgba(0, 0, 0, .1), rgb(39, 45, 46));
     background: linear-gradient(rgba(0, 0, 0, .1),  rgb(39, 45, 46));
     display: flex;
     justify-content: center;
@@ -340,40 +341,3 @@ span{
         font-size: 2rem;
         margin: 3rem 0;
     }
-    .home{
-        flex-direction: column;
-        margin-left: -100px;
-    }
-    
-    .home-content h3{
-        font-size: 2.6rem;
-    }
-    .home-content h1{
-        font-size: 5rem;
-    }
-    .home-img img{
-        width: 70vw;
-        height: 80vw;
-        margin-top: 4rem;
-    }
-    /*about*/
-    .about{
-        flex-direction: column-reverse;
-    }
-    .about img{
-        width: 70vw;
-        height: 80vw;
-        margin-top: 4rem;
-        margin-left: 50px;
-    }
-    /*portfolio*/
-    .portfolio-box{
-        margin-right: 2rem;
-    }
-    .portfolio h2{
-        margin-bottom: 3rem;
-    }
-    .portfolio-container{
-        grid-template-columns: repeat(2, 1fr);
-    }
-}
